<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="@drawable/biz_plugin_weather_shenzhen_bg"
        android:orientation="vertical">
        <!--界面主体部分-->
        <RelativeLayout
            android:id="@+id/weather_cur"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <!--实时天气信息-->
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/weather_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:singleLine="true"
                    android:text="@string/city"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"/>
                <TextView
                    android:id="@+id/publish_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:singleLine="true"
                    android:text="@string/publish_time"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/weather_humid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_below="@+id/publish_time"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:text="@string/humidy_val"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

            //PM2.5信息
            <LinearLayout
                android:id="@+id/pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="6dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!--PM2.5-->
                        <TextView
                            android:id="@+id/pm_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/pm_num"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"/>
                        <!--PM数值-->
                        <TextView
                            android:id="@+id/pm_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/pm_value"
                            android:textColor="@android:color/white"
                            android:textSize="30sp"/>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/pm_img"
                        android:layout_width="74dp"
                        android:layout_height="64dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/pollute_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/pollute_type"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </RelativeLayout>
        <!--今日天气信息-->
        <RelativeLayout android:id="@+id/weather_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_below="@id/weather_humid"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/weather_pic"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:scaleType="fitCenter"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <!--CurrentWeather-->
            <TextView
                android:id="@+id/today_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/weather_pic"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:singleLine="true"
                android:text="@string/today_date"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />
            <!--temperature数值-->
            <TextView
                android:id="@+id/today_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:singleLine="true"
                android:text="@string/weather_temperature"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_toRightOf="@id/weather_pic"
                android:layout_below="@id/today_date"/>
            <TextView
                android:id="@+id/today_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@id/weather_pic"
                android:layout_below="@id/today_temp"
                android:singleLine="true"
                android:text="@string/weather_type"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/today_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@id/weather_pic"
                android:layout_below="@id/today_type"
                android:singleLine="true"
                android:text="@string/wind_type"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <!--</LinearLayout>-->
        </RelativeLayout>
        <!--未来七天信息-->
        <RelativeLayout
            android:id="@+id/weather_futureThreeDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            >
            <RelativeLayout
                android:id="@+id/future_weather1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"><!--android:layout_below="@id/weather_pic"-->
                <TextView
                    android:id="@+id/weather1_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    android:text="@string/today_date"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>
                <ImageView
                    android:id="@+id/weather1_pic"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:layout_below="@+id/weather1_date"
                    android:layout_alignRight="@+id/weather1_type"
                    android:layout_alignEnd="@+id/weather1_type"/>
                <TextView
                    android:id="@+id/weather1_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/weather1_pic"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/weather1_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@id/weather1_temp"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/weather1_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@id/weather1_type"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>
                <!--</RelativeLayout>

                <RelativeLayout
                    android:id="@+id/future_weather2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_toLeftOf="@id/future_weather3">--><!--android:layout_below="@id/weather_pic"-->
            </RelativeLayout>

            <TextView
                android:id="@+id/weather2_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_date"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_alignTop="@+id/future_weather1"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/weather2_pic"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/biz_plugin_weather_qing"
                android:scaleType="fitCenter"
                android:layout_below="@+id/weather2_date"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/today2_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/weather_temperature"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_below="@+id/weather2_pic"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/today2_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/weather_type"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_below="@+id/today2_temp"
                android:layout_alignLeft="@+id/today2_temp"
                android:layout_alignStart="@+id/today2_temp"/>

            <TextView
                android:id="@+id/today2_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/wind_type"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_below="@+id/today2_type"
                android:layout_alignLeft="@+id/today2_type"
                android:layout_alignStart="@+id/today2_type"/>

            <RelativeLayout
                android:id="@+id/future_weather3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/future_weather1"><!--android:layout_below="@id/weather_pic"-->
                <TextView
                    android:id="@+id/weather3_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_date"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
                <ImageView
                    android:id="@+id/weather3_pic"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/biz_plugin_weather_qing"
                    android:scaleType="fitCenter"
                    android:layout_below="@+id/weather3_date"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignLeft="@+id/weather3_date"
                    android:layout_alignStart="@+id/weather3_date"/>
                <TextView
                    android:id="@+id/today3_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/weather_temperature"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_below="@+id/weather3_pic"
                    android:layout_alignLeft="@+id/today3_type"
                    android:layout_alignStart="@+id/today3_type"/>
                <TextView
                    android:id="@+id/today3_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/weather_type"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_below="@+id/today3_temp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/today3_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/wind_type"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_below="@+id/today3_type"
                    android:layout_alignLeft="@+id/today3_temp"
                    android:layout_alignStart="@+id/today3_temp"/>
            </RelativeLayout>
        </RelativeLayout>

    <!--广告-->
</LinearLayout>
